# django-starter

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vite.config.js
app/: settings.py  urls.py  views.py
assets/js/: main.js
assets/js/pages/: Home.tsx  Todos.tsx
templates/: base.html
todo/: admin.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
